--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,10 @@
 header {
+  margin: 0 1rem;
+  ul {
+    padding: 0px;
+    display: flex;
+    gap: 1rem;
+  }    
 
   a {
     font-size: 1.5rem;
@@ -6,6 +12,10 @@ header {
     text-transform: uppercase;
     text-decoration: none;
     color: black;
+
+    &:hover {
+      color: blue;
+    }
   }
 
 }
